syntax = "proto3";

option go_package = "./internal/proto";

service UserService {
  rpc Signup(SignupReq) returns (SignupResp){}
  rpc Login(LoginReq) returns (LoginResp){}
  rpc Get(GetUserReq) returns (GetUserResp){}
}

service WalletService {
  rpc Get(GetWalletReq) returns (GetWalletResp){}
  rpc Transfer(TransferReq) returns (TransferResp){}
}

message SignupReq {
  string username = 1;
  string password = 2;
}

message SignupResp {
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {

}

message GetUserReq {
}

message GetUserResp {

}

message GetWalletReq {
}

message GetWalletResp {
  int64 balance = 1;
  string currency = 2;
}

message TransferReq {
  uint64 to_user = 1;
  int64 amount = 2;
  string currency = 3;
}

message TransferResp {
}

message User {
  uint64 id = 1;
  string username = 2;
  string hashed_password = 3;
  uint64 status = 4;
  uint64 version = 5;
  uint64 ctime = 6;
  uint64 mtime = 7;
}

message Wallet {
  uint64 id = 1;
  uint64 user_id = 2;
  int64 balance = 3;
  string currency = 4;
  uint64 status = 5;
  uint64 version = 6;
  uint64 ctime = 7;
  uint64 mtime = 8;
}